# direct_sql

./: README.md
direct_sql/: poetry.prof  pyproject.toml
direct_sql/query_function_mapper/: queries.py  query_mapper.py
direct_sql/query_function_mapper/_templates/: queries.template.py
direct_sql/query_function_mapper/queries/: simple_query.sql
direct_sql/tests/: conftest.py  test_query_mapper.py
direct_sql/tests/data/simple_setup/: schema.sql
direct_sql/tests/data/simple_setup/queries/: simple_query.sql
sql_test_tools/: db_test_tools.py  pyproject.toml  test.py
