[tool.poetry]
name = "query_function_mapper"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
sqlparse = "^0.4.2"
Jinja2 = "^3.1.1"
SQLAlchemy = "^1.4.35"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
db-test-tools = {path = "../sql_test_tools", develop = true }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
